--- a/index.html
+++ b/index.html
@@ -150,18 +150,18 @@
         var requestId;
         $("#garage").hover( handlerIn, handlerOut );
 
-        //////
-        // var obj1 = {
-        //     name: "value0",
-        //     kills: 126,
-        // }
-        // var obj2 = {
-        //     name: "value1",
-        //     kills: 125,
-        // }
-        // var empty =[];
-        // empty.push(obj1,obj2);
-        // reload_table(empty);
+        ////
+        var obj1 = {
+            name: "value0",
+            kills: 126,
+        }
+        var obj2 = {
+            name: "value1",
+            kills: 125,
+        }
+        var empty =[];
+        empty.push(obj1,obj2);
+        reload_table(empty);
         
         //var intervalID;
         //fly_faster();
