death in center

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             </table>
     </div> 
-    <div id = "dead" style="position: absolute; left:50%; margin-left: -180px; top: 30%; height: 300px; width: 300px;"> 
+    <div id = "dead"> 
     <!--Death animation-->
     </div>
     <div id ="help"> </div>
