--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </style>
 <body onkeypress="showChar(event);" >
 <div id="main">
+    <img id=btn__hide src="eye.png">
     <div id="overlay">
         
 
@@ -211,6 +212,8 @@
           }
           return false;   
       }
+
+
       
 
 </script>
