store libraries locally

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>N-o-C-H</title>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="/style.css">
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="farbtastic.js"></script>
-    <script src="lib/easeljs-0.8.2.min.js"></script>
-    <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
+    <script type="text/javascript" src="lib/easeljs-0.8.2.min.js"></script>
+    <script type="text/javascript" src="preloadjs-0.6.2.min.js"></script>
     <script type="text/javascript" src="help.js"></script>
     <script type="text/javascript" src="hover_animation.js"></script>
     <script type="text/javascript" src="simple_animation.js"></script>
